<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/view"
        android:layout_alignParentStart="true"
        android:text="@string/left" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/view"
        android:layout_alignParentEnd="true"
        android:text="@string/right" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/bottom" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_toStartOf="@id/button"
        android:text="@string/center_left" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@id/button"
        android:text="@string/center_right" />
</RelativeLayout>