<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1">

    <Button
        android:id="@+id/act1_btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn1"
        app:layout_constraintBottom_toTopOf="@+id/act1_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/act1_btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn2"
        app:layout_constraintBottom_toTopOf="@+id/act1_btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act1_btn1"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/act1_btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn3"
        app:layout_constraintBottom_toTopOf="@+id/act1_btn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act1_btn2"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/act1_btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act1_btn3"
        app:layout_constraintWidth_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>